--- a/less/variables.less
+++ b/less/variables.less
@@ -1,10 +1,8 @@
-// VARIABLES
-
 // Fonts
 @font-logo: "Pacifico", cursive;
 @font-content: "Lato", sans-serif;
 
-// Colors - Black and White Testing
+// Colors - Black and White Prototype Testing
 @white: #ffffff;
 @light-grey: #eee;
 @dark-grey: #444444;
