--- a/less/container.less
+++ b/less/container.less
@@ -3,13 +3,13 @@
   margin: 0 auto;
   
   @media @desktop {
-    .desktop-margin();
+    .responsive-margin();
   }
   
   @media @tablet {
-    .tablet-margin();
+    .responsive-margin();
   }
   @media @mobile {
-    .mobile-margin();
+    .responsive-margin();
   }
 }
