--- a/less/content.less
+++ b/less/content.less
@@ -1,10 +1,10 @@
 .content-panel {
   display: flex;
-  align-items: center;
-  justify-content: space-between;
   flex-direction: row;
-  padding: 150px 0;
+  justify-content: space-between;
+  align-items: center;
   border-bottom: 1px solid @border-section;
+  padding: 150px 0;
   font-size: @font-size-content;
   line-height: @line-height-content;
 
@@ -14,6 +14,7 @@
   
   h2 {
     line-height: @line-height-content-h2;
+
     @media @desktop {
       font-size: @font-size-big-responsive;
     }
@@ -24,14 +25,6 @@
       margin: 30px 0 0 0;
       font-size: @font-size-big-responsive;
     }
-  }
-
-  .image-straight {
-    padding-right: 7.5%
-  }
-
-  .image-reverse {
-    padding-left: 7.5%;
   }
 
   .content-text {
@@ -51,6 +44,22 @@
     height: auto;
   }
 
+  .content-image-normal {
+    padding-right: 7.5%;
+
+    @media @mobile {
+      padding: 0;
+    }
+  }
+
+  .content-image-reverse {
+    padding-left: 7.5%;
+
+    @media @mobile {
+      padding: 0;
+    }
+  }
+
   @media @desktop {
     padding: 120px 0;
   }
@@ -63,12 +72,14 @@
   @media @mobile {
     flex-direction: column;
     padding: 60px 0;
+    margin: 0 0 15px 0;
   }
 } // content-panel
 
-.reverse {
+.content-panel-reverse {
   flex-direction: row-reverse;
   background-color: @white;
+
   @media @mobile {
     flex-direction: column;
   }
