--- a/less/global.less
+++ b/less/global.less
@@ -1,6 +1,6 @@
 body {
-  // overflow:hidden is used to have a clipped image
-  // on the header image when on tablet view
+  // overflow:hidden is used to have a clipped image effect
+  // on header image when on tablet viewport
   // source: https://stackoverflow.com/a/16671476/933941
   overflow: hidden;
   overflow-y: scroll;
